Add optional login cookie rembering

--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -48,6 +48,11 @@
                             <input type="password" class="form-control" id="password" name="password" required>
                         </div>
                         
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="remember-me" name="remember-me">
+                            <label class="form-check-label" for="remember-me">Stay logged in</label>
+                        </div>
+                        
                         <button type="submit" class="btn btn-primary w-100">Sign In</button>
                     </form>
                 </div>
