Refactor CSS, redirect to recipes if logged in when view `/`

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -14,7 +14,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a th:href="@{/recipes}" 
-                           class="nav-link" 
+                           cxlass="nav-link"
                            th:classappend="${currentPage == 'recipes'} ? 'active' : ''"
                            aria-current="page">Recipes</a>
                     </li>
