--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Salty Server</title>
-    <link rel="stylesheet" th:href="@{/css/bootstrap.css}" >
+    <th:block th:replace="~{fragments/css-headers :: css-headers}"></th:block>
     <style>
         body {
             background-color: #f5f5f5;
@@ -59,6 +59,6 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" th:src="@{/js/bootstrap.bundle.min.js}"></script>
+    <th:block th:replace="~{fragments/css-headers :: bootstrap-js}"></th:block>
 </body>
 </html>
